# fraud-detection-pipeline

./: .gitignore  README.md  instructions.md  main.py  pyproject.toml
config/: config.example.yaml
sql/: create_staging_table.sql  create_star_schema.sql
src/: database.py
src/analysis/: eda.py
src/deployment/: app.py  model_loader.py  schemas.py
src/ingestion/: create_schema.py  load_staging.py  populate_dimensions.py  populate_facts.py  populate_star_schema.py  schema_validation.py
src/model_development/: evaluate_model.py  model_development.py  train_model.py  train_test_split.py
src/monitoring/: drift_detector.py  monitor.py  performance_tracker.py  prediction_logger.py
src/prepocessessing/: data_loader.py  feature_engineering.py  preprocess.py  resampling.py
