[project]
name = "fraud-detection-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.5", # APIs
    "imbalanced-learn>=0.14.1", # Handle imbalanced datasets
    "joblib>=1.5.3", # Save and load trained ML models
    "numpy>=2.4.2", # Numerical computing and array operations
    "pandas>=3.0.0", # Data manuipulation and analysis
    "pydantic>=2.12.5", # Schema validations
    "pymysql>=1.1.2", # SQL driver
    "pyyaml>=6.0.3", # Read .yaml files
    "scikit-learn>=1.8.0", # Machine Learning
    "sqlalchemy>=2.0.46", # ORM
]
